--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Coaching</title>
+    <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
   </head>
   <body>
     <div id="root"></div>
